Bug 152373. Fix background-attachment:fixed regression by eliminating last remaining use of bogus ALWAYS_BLIT flags, replacing them with a less odious hack which makes smarter scroll decisions by checking for the presence of fixed-position elements. r=kmcclusk,sr=kin